# daftar-mahasiswa-be-rust

./: .env  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src/: api.rs  db.rs  models.rs
