[package]
name = "daftar-mahasiswa-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
mongodb = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3"
tokio = { version = "1.34.0", features = ["full"] }
bson = { version = "2.7.0", features = ["chrono"] }
thiserror = "1.0"
env_logger = "0.10.1"
log = "0.4"